--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@prisma/client": "^5.18.0",
+    "@types/pg": "^8.11.6",
     "framer-motion": "^11.3.30",
     "jotai": "^2.9.3",
     "next": "14.2.6",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -24,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
+    "prisma": "^5.18.0",
     "typescript": "^5"
   }
 }
